编写数据采集模块的部署过程